<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoogleImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter search query</string>
    <string name="search_label">Search</string>
    <string name="image_title_label">Image Title</string>
    <string name="title_activity_image_display">Full Image</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_title_label">Advanced Search Options</string>
    <string name="settings_size_label">Image Size</string>
    <string name="settings_color_label">Color Filter</string>
    <string name="settings_type_label">Image Type</string>
    <string name="settings_site_label">Site Filter</string>
    <string name="settings_save_button">Save</string>
    <string name="settings_site_hint"></string>
    
    <string-array name="image_sizes">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>extra-large</item>
    </string-array>
    <string-array name="color_filter">
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
    </string-array>
    <string-array name="image_types">
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
    
</resources>
